--- a/.github/workflows/copilot_workflow.yml
+++ b/.github/workflows/copilot_workflow.yml
@@ -12,5 +12,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install GitHub CLI
+        run: sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0 && sudo apt-add-repository https://cli.github.com/packages && sudo apt update && sudo apt install gh
+
       - name: Run Copilot suggest
-        run: gh copilot suggest --prompts-file=C:\Code\GreenCodeApi\prompts.csv --output-dir=C:\Users\sansk\OneDrive\Desktop\StaticCodeAnalysis\destination_folder
+        run: |
+          mkdir -p "/tmp/destination_folder"
+          gh copilot suggest --prompts-file="../Code/GreenCodeApi/prompts.csv" --output-dir="/tmp/destination_folder"
