--- a/.github/workflows/copilot_workflow.yml
+++ b/.github/workflows/copilot_workflow.yml
@@ -19,7 +19,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install GitHub CLI
-        run: sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0 && sudo apt-add-repository https://cli.github.com/packages && sudo apt update && sudo apt install gh
+        run: |
+          wget https://github.com/cli/cli/releases/download/v2.44.1/gh_2.44.1_linux_amd64.tar.gz
+          tar xvf gh_2.44.1_linux_amd64.tar.gz
+          sudo mv gh_2.44.1_linux_amd64/bin/gh /usr/local/bin/
 
       - name: Run Copilot suggest
         run: |
