--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -3,13 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <build>
-        <testSourceDirectory>tests</testSourceDirectory>
-    </build>
-         
     <groupId>com.example</groupId>
     <artifactId>Dynamic-SourceCode-Scan</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <sourceDirectory>../</sourceDirectory>
+        <testSourceDirectory>.</testSourceDirectory>
+    </build>
 
     <dependencies>
         <dependency>
