--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <build>
-        <sourceDirectory>../</sourceDirectory>
+        <sourceDirectory>.</sourceDirectory>
         <testSourceDirectory>.</testSourceDirectory>
     </build>
 
