--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
-        </dependency>
+             <groupId>org.junit.jupiter</groupId>
+             <artifactId>junit-jupiter-api</artifactId>
+             <version>5.7.0</version>
+             <scope>test</scope>
+         </dependency>
     </dependencies>
 </project>
