--- a/credentials.env
+++ b/credentials.env
@@ -1,3 +1,3 @@
-api_key="eadf76dd169e4172a463e7375946835f",
-api_version="2024-02-15-preview",
-azure_endpoint="https://green-code-uks.openai.azure.com"
+api_key=eadf76dd169e4172a463e7375946835f
+api_version=2024-02-15-preview
+azure_endpoint=https://green-code-uks.openai.azure.com
