--- a/credentials.env
+++ b/credentials.env
@@ -1,3 +1,6 @@
-api_key=eadf76dd169e4172a463e7375946835f
-api_version=2024-02-15-preview
-azure_endpoint=https://green-code-uks.openai.azure.com
+# .env file
+SOURCE_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\tests
+DOWNLOAD_DIRECTORY=D:\\Documents\\TechM\\Green_Software_Development\\Third Task\\Projects & Docs\\Assistant api\\Refined Files
+API_KEY=eadf76dd169e4172a463e7375946835f
+API_VERSION=2024-02-15-preview
+AZURE_ENDPOINT=https://green-code-uks.openai.azure.com
