--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DOWNLOAD_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanP
 AZURE_API_KEY=eadf76dd169e4172a463e7375946835f
 AZURE_API_VERSION=2024-02-15-preview
 AZURE_ENDPOINT=https://green-code-uks.openai.azure.com
+PYTEST_PATH=C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe
+MAVEN_PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd
+SOURCE_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\tests2
+REFINED_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
+RESULT_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
