--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ MAVEN_PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd
 SOURCE_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\tests2
 REFINED_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
 RESULT_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
+EMISSIONS_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
+EMISSIONS_AFTER_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
+RESULT_FOLDER_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
