--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env file
 SOURCE_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\tests2
-DOWNLOAD_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
+GREEN_REFINED_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
 AZURE_API_KEY=eadf76dd169e4172a463e7375946835f
 AZURE_API_VERSION=2024-02-15-preview
 AZURE_ENDPOINT=https://green-code-uks.openai.azure.com
