--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ AZURE_API_VERSION=2024-02-15-preview
 AZURE_ENDPOINT=https://green-code-uks.openai.azure.com
 PYTEST_PATH=C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe
 MAVEN_PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd
-SOURCE_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\tests2
-REFINED_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
+#SOURCE_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\tests2
+#REFINED_FOLDER=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
 RESULT_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
-EMISSIONS_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
-EMISSIONS_AFTER_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
-RESULT_FOLDER_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
+RESULT_SOURCE_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
+RESULT_GREEN_REFINED_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
+#RESULT_FOLDER_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
