--- a/.env
+++ b/.env
@@ -17,3 +17,11 @@ MAVEN_PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd
 RESULT_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
 RESULT_SOURCE_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
 RESULT_GREEN_REFINED_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
+
+#sharepoint credentials
+SITE_URL="https://sbupune.sharepoint.com/sites/TechMahindraGreenCodePipeline2"
+LIST_NAME="Pipeline CSVs"
+USERNAME="SANSKAR.MCA22003@SBUP.EDU.IN"
+PASSWORD="Sk@6353910033"
+FILES_TO_UPLOAD='["C:\ProgramData\Jenkins\.jenkins\workspace\GreenCodeScanPipeline\emissions_data.csv", "C:\ProgramData\Jenkins\.jenkins\workspace\GreenCodeScanPipeline\server_data.xlsx"]'
+SHAREPOINT_CLIENT_LIB_PATH="C:\Program Files\SharePoint Online Management Shell\Microsoft.Online.SharePoint.PowerShell\"
