--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ SITE_URL="https://sbupune.sharepoint.com/sites/TechMahindraGreenCodePipeline2"
 LIST_NAME="Pipeline CSVs"
 USERNAME="SANSKAR.MCA22003@SBUP.EDU.IN"
 PASSWORD="Sk@6353910033"
-FILES_TO_UPLOAD='["C:\ProgramData\Jenkins\.jenkins\workspace\GreenCodeScanPipeline\emissions_data.csv", "C:\ProgramData\Jenkins\.jenkins\workspace\GreenCodeScanPipeline\server_data.xlsx"]'
-SHAREPOINT_CLIENT_LIB_PATH="C:\Program Files\SharePoint Online Management Shell\Microsoft.Online.SharePoint.PowerShell\"
+FILES_TO_UPLOAD='["C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\emissions_data.csv", "C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\server_data.xlsx"]'
+SHAREPOINT_CLIENT_LIB_PATH="C:\\Program Files\\SharePoint Online Management Shell\\Microsoft.Online.SharePoint.PowerShell"
+
 
