--- a/.env
+++ b/.env
@@ -26,4 +26,16 @@ PASSWORD="Sk@6353910033"
 FILES_TO_UPLOAD='["C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\emissions_data.csv", "C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\server_data.xlsx"]'
 SHAREPOINT_CLIENT_LIB_PATH="C:\\Program Files\\SharePoint Online Management Shell\\Microsoft.Online.SharePoint.PowerShell"
 
+#jenkins script
+PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin;$PATH
+REPO_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline
+PYTHON_PATH=C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\python.exe
+CAST_HIGHLIGHT_PATH=C:\\Users\\sansk\\Downloads\\Highlight-Automation-Command
+PYTEST_PATH=C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe
+SHAREPOINT_PS_SCRIPT_PATH=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\upload_to_sharepoint.ps1
+CLIENT_NAME=ZF
+GIT_BRANCH=main
+GIT_CREDENTIALS_ID=65fd2953-20c8-47ac-90a5-de4ab6edf5a
+GIT_URL=https://github.com/sanskar22003/GreenCodeScan.git
+
 
