--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-# .env file
-
 # main path
 SOURCE_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline
-GREEN_REFINED_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
+GREEN_REFINED_DIRECTORY=%SOURCE_DIRECTORY%\\Green_Refined_Files
 
 # Credentials value
 AZURE_API_KEY=eadf76dd169e4172a463e7375946835f
@@ -14,26 +12,14 @@ PYTEST_PATH=C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scrip
 MAVEN_PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd
 
 # result path
-RESULT_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
-RESULT_SOURCE_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
-RESULT_GREEN_REFINED_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
+RESULT_DIR=%SOURCE_DIRECTORY%\\Green_Refined_Files\\Result
+RESULT_SOURCE_DIR=%SOURCE_DIRECTORY%\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
+RESULT_GREEN_REFINED_DIRECTORY=%SOURCE_DIRECTORY%\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
 
-#sharepoint credentials
+# SharePoint credentials
 SITE_URL="https://sbupune.sharepoint.com/sites/TechMahindraGreenCodePipeline2"
 LIST_NAME="Pipeline CSVs"
 USERNAME="SANSKAR.MCA22003@SBUP.EDU.IN"
 PASSWORD="Sk@6353910033"
-FILES_TO_UPLOAD='["C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\emissions_data.csv", "C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\server_data.xlsx"]'
+FILES_TO_UPLOAD='["%SOURCE_DIRECTORY%\\emissions_data.csv", "%SOURCE_DIRECTORY%\\server_data.xlsx"]'
 SHAREPOINT_CLIENT_LIB_PATH="C:\\Program Files\\SharePoint Online Management Shell\\Microsoft.Online.SharePoint.PowerShell"
-
-#jenkins script
-PATH="C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin;$PATH"
-REPO_PATH="C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline"
-PYTHON_PATH="C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\python.exe"
-CAST_HIGHLIGHT_PATH="C:\\Users\\sansk\\Downloads\\Highlight-Automation-Command"
-PYTEST_PATH="C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe"
-SHAREPOINT_PS_SCRIPT_PATH="C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\upload_to_sharepoint.ps1"
-CLIENT_NAME="ZF"
-GIT_BRANCH="main"
-GIT_CREDENTIALS_ID="65fd2953-20c8-47ac-90a5-de4ab6edf5a"
-GIT_URL="https://github.com/sanskar22003/GreenCodeScan.git"
