--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
+# .env file
+
 # main path
 SOURCE_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline
-GREEN_REFINED_DIRECTORY=%SOURCE_DIRECTORY%\\Green_Refined_Files
+GREEN_REFINED_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files
 
 # Credentials value
 AZURE_API_KEY=eadf76dd169e4172a463e7375946835f
@@ -12,14 +14,14 @@ PYTEST_PATH=C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scrip
 MAVEN_PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd
 
 # result path
-RESULT_DIR=%SOURCE_DIRECTORY%\\Green_Refined_Files\\Result
-RESULT_SOURCE_DIR=%SOURCE_DIRECTORY%\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
-RESULT_GREEN_REFINED_DIRECTORY=%SOURCE_DIRECTORY%\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
+RESULT_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result
+RESULT_SOURCE_DIR=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_before_emissions_data.csv
+RESULT_GREEN_REFINED_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\Green_Refined_Files\\Result\\main_after_emissions_data.csv
 
-# SharePoint credentials
+#sharepoint credentials
 SITE_URL="https://sbupune.sharepoint.com/sites/TechMahindraGreenCodePipeline2"
 LIST_NAME="Pipeline CSVs"
 USERNAME="SANSKAR.MCA22003@SBUP.EDU.IN"
 PASSWORD="Sk@6353910033"
-FILES_TO_UPLOAD='["%SOURCE_DIRECTORY%\\emissions_data.csv", "%SOURCE_DIRECTORY%\\server_data.xlsx"]'
+FILES_TO_UPLOAD='["C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\emissions_data.csv", "C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline\\server_data.xlsx"]'
 SHAREPOINT_CLIENT_LIB_PATH="C:\\Program Files\\SharePoint Online Management Shell\\Microsoft.Online.SharePoint.PowerShell"
