--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ RESULT_GREEN_REFINED_DIRECTORY=${RESULT_DIR}\\main_after_emissions_data.csv
 # sharepoint credentials
 SITE_URL="https://sbupune.sharepoint.com/sites/TechMahindraGreenCodePipeline2"
 LIST_NAME="Pipeline CSVs"
-USERNAME="SANSKAR.MCA22003@SBUP.EDU.IN"
-PASSWORD="Sk@6353910033"
+USERNAME="write here"
+PASSWORD="write here"
 FILES_TO_UPLOAD='["${SOURCE_DIRECTORY}\\emissions_data.csv", "${SOURCE_DIRECTORY}\\server_data.xlsx"]'
 SHAREPOINT_CLIENT_LIB_PATH="C:\\Program Files\\SharePoint Online Management Shell\\Microsoft.Online.SharePoint.PowerShell"
