--- a/.env
+++ b/.env
@@ -1,27 +1,14 @@
-# .env file
-
-# main path
-SOURCE_DIRECTORY=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\GreenCodeScanPipeline
-GREEN_REFINED_DIRECTORY=${SOURCE_DIRECTORY}\\Green_Refined_Files
-
+#SOURCE_DIRECTORY=""
+GREEN_REFINED_DIRECTORY=""
 # Credentials value
 AZURE_API_KEY=eadf76dd169e4172a463e7375946835f
 AZURE_API_VERSION=2024-02-15-preview
 AZURE_ENDPOINT=https://green-code-uks.openai.azure.com
-
 # tools path
-PYTEST_PATH=C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe
-MAVEN_PATH=C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd
-
+PYTEST_PATH="C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe"
+MAVEN_PATH="C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd"
+JAVAC_PATH="C:\\Program Files\\Java\\jdk-21\\bin\\javac.exe"
 # result path
-RESULT_DIR=${SOURCE_DIRECTORY}\\Green_Refined_Files\\Result
-RESULT_SOURCE_DIR=${RESULT_DIR}\\main_before_emissions_data.csv
-RESULT_GREEN_REFINED_DIRECTORY=${RESULT_DIR}\\main_after_emissions_data.csv
-
-# sharepoint credentials
-SITE_URL="https://sbupune.sharepoint.com/sites/TechMahindraGreenCodePipeline2"
-LIST_NAME="Pipeline CSVs"
-USERNAME="write here"
-PASSWORD="write here"
-FILES_TO_UPLOAD='["${SOURCE_DIRECTORY}\\emissions_data.csv", "${SOURCE_DIRECTORY}\\server_data.xlsx"]'
-SHAREPOINT_CLIENT_LIB_PATH="C:\\Program Files\\SharePoint Online Management Shell\\Microsoft.Online.SharePoint.PowerShell"
+RESULT_DIR=""
+RESULT_SOURCE_DIR=""
+RESULT_GREEN_REFINED_DIRECTORY=""
