--- a/.env
+++ b/.env
@@ -20,3 +20,7 @@ PROMPT_4="Optimize memory usage in the code, n"
 PROMPT_5="Reduce the number of dependencies, y"
 PROMPT_6="Refactor the code to reduce complexity, n"
 PROMPT_7="Test the code for edge cases, y"
+
+PROMPT_GENERATE_TESTCASES="Create a unit test case for the following {file_extension} file: {file_name}, y"
+
+
