--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 #SOURCE_DIRECTORY=""
 GREEN_REFINED_DIRECTORY=""
 # Credentials value
-AZURE_API_KEY=eadf76dd169e4172a463e7375946835f
-AZURE_API_VERSION=2024-02-15-preview
-AZURE_ENDPOINT=https://green-code-uks.openai.azure.com
+AZURE_API_KEY=8de8393d27664fb4be28039aed342db9      #eadf76dd169e4172a463e7375946835f
+AZURE_API_VERSION=2024-04-30     #2024-02-15-preview
+AZURE_ENDPOINT=https://greencode-eastus.openai.azure.com           #https://green-code-uks.openai.azure.com
 # tools path
 PYTEST_PATH="C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe"
 MAVEN_PATH="C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd"
