--- a/.env
+++ b/.env
@@ -37,8 +37,8 @@ PROMPT_1="Make the code more energy efficient, y"
 PROMPT_2="Eliminate any redundant or dead code, n"
 PROMPT_3="Simplify complex algorithms to reduce computational load, n"
 PROMPT_4="Optimize memory usage in the code, n"
-PROMPT_5="Reduce the number of dependencies, y"
+PROMPT_5="Reduce the number of dependencies, n"
 PROMPT_6="Refactor the code to reduce complexity, n"
 PROMPT_7="Test the code for edge cases, n"
 
-PROMPT_GENERATE_TESTCASES="Create a unit test case for the following {file_extension} file: {file_name}, y"
+PROMPT_GENERATE_TESTCASES="Create a unit test case for the following {file_extension} file: {file_name}, n"
