--- a/.env
+++ b/.env
@@ -5,13 +5,14 @@ GREEN_REFINED_DIRECTORY=""
 AZURE_API_KEY=8de8393d27664fb4be28039aed342db9      #eadf76dd169e4172a463e7375946835f
 AZURE_API_VERSION=2024-02-15-preview     #2024-02-15-preview
 AZURE_ENDPOINT=https://greencode-eastus.openai.azure.com           #https://green-code-uks.openai.azure.com
-AZURE_MODEL="gpt-4o-mini"
+AZURE_MODEL="GPT4o"       #Options: GPT4o, gpt-4o-mini
 
 # tools path
 PYTEST_PATH="C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest.exe"
 MAVEN_PATH="C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd"
 JAVAC_PATH="C:\\Program Files\\Java\\jdk-21\\bin\\javac.exe"
 NUNIT_PATH="C:\\Program Files (x86)\\NUnit.org\\nunit-console\\nunit3-console.exe"
+GTEST_PATH="C:\\Program Files\\CMake\\bin\\cmake.exe"
 
 # result path
 RESULT_DIR=""
@@ -31,6 +32,15 @@ GLOBAL_RENEWABLE_CO2_FACTOR=0.01
 # Energy Source and Location
 ENERGY_SOURCE=grid        # Options: grid, renewable
 LOCATION=global           # Options: global, us
+
+
+# List of files to exclude from processing
+EXCLUDED_FILES=GreenCodeRefiner.py,RefinerFunction.py,server_emissions.py,track_emissions.py,report_template.html,details_template.html,emissions_report.html,details_report.html
+
+EXCLUDED_DIRECTORIES=GreenCode
+
+# Store file extensions in a variable
+FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts', '.rb']
 
 
 PROMPT_1="Make the code more energy efficient, y"
