--- a/.env
+++ b/.env
@@ -12,7 +12,8 @@ PYTEST_PATH="C:\\Users\\sansk\\AppData\\Local\\Programs\\Python\\Python312\\Scri
 MAVEN_PATH="C:\\Users\\sansk\\Downloads\\apache-maven-3.9.6\\bin\\mvn.cmd"
 JAVAC_PATH="C:\\Program Files\\Java\\jdk-21\\bin\\javac.exe"
 NUNIT_PATH="C:\\Program Files (x86)\\NUnit.org\\nunit-console\\nunit3-console.exe"
-GTEST_PATH="C:\\Program Files\\CMake\\bin\\cmake.exe"
+GTEST_PATH="C:\\googletest"
+GTEST_CMAKE_PATH="C:\\Program Files\\CMake\\bin\\cmake.exe"
 
 # result path
 RESULT_DIR=""
