--- a/.env
+++ b/.env
@@ -44,12 +44,7 @@ EXCLUDED_DIRECTORIES=GreenCode
 FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts', '.rb']
 
 
-PROMPT_1="Make the code more energy efficient, y"
-PROMPT_2="Eliminate any redundant or dead code, n"
-PROMPT_3="Simplify complex algorithms to reduce computational load, n"
-PROMPT_4="Optimize memory usage in the code, n"
-PROMPT_5="Reduce the number of dependencies, n"
-PROMPT_6="Refactor the code to reduce complexity, n"
-PROMPT_7="Test the code for edge cases, n"
+PROMPT_1="Transform the source code into green energy-efficient code by making it more energy efficient eliminating redundant or dead code simplifying complex algorithms to reduce computational load optimizing memory usage reducing dependencies refactoring to minimize complexity and ensuring it is tested thoroughly for edge cases. Also ensure the code output remains unchanged and focuses only on the specified objectives., y"
+
 
 PROMPT_GENERATE_TESTCASES="Create a unit test case for the following {file_extension} file: {file_name}, n"
