--- a/.env
+++ b/.env
@@ -47,4 +47,4 @@ FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts
 PROMPT_1="Transform the source code into green energy-efficient code by making it more energy efficient eliminating redundant or dead code simplifying complex algorithms to reduce computational load optimizing memory usage reducing dependencies refactoring to minimize complexity and ensuring it is tested thoroughly for edge cases. Also ensure the code output remains unchanged and focuses only on the specified objectives., y"
 
 
-PROMPT_GENERATE_TESTCASES="Create a unit test case for the following {file_extension} file: {file_name}, n"
+PROMPT_GENERATE_TESTCASES="Create a unit test case, n"
