--- a/.env
+++ b/.env
@@ -45,4 +45,4 @@ FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts
 
 
 PROMPT_1="Transform the source code into green energy-efficient code by making it more energy efficient eliminating redundant or dead code simplifying complex algorithms to reduce computational load optimizing memory usage reducing dependencies refactoring to minimize complexity and ensuring it is tested thoroughly for edge cases Also ensure the code output remains unchanged add comments where you made changes for identification and focus only on the specified objectives, y"
-PROMPT_GENERATE_TESTCASES="Create a unit test case for the file makesure you create a test cases for entire given code and highlight the updated area with comments, n"
+PROMPT_GENERATE_TESTCASES="Create a unit test case for the file makesure you create a test cases for entire given code and highlight the updated area with comments, y"
