--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ LOCATION=global           # Options: global, us
 # List of files to exclude from processing
 EXCLUDED_FILES=GreenCodeRefiner.py,RefinerFunction.py,server_emissions.py,track_emissions.py,report_template.html,details_template.html,emissions_report.html,details_report.html,AzureMarketplace.py,last_run_details_template.html,last_run_report_template.html
 
-EXCLUDED_DIRECTORIES=GreenCode,SRC-TestSuite
+EXCLUDED_DIRECTORIES=GreenCode
 
 # Store file extensions in a variable
 FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts', '.rb']
