--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ EXCLUDED_DIRECTORIES=GreenCode
 # Store file extensions in a variable
 FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts', '.rb']
 
-PROMPT_1 = """
+PROMPT_1="""
 Refactor this code to improve its efficiency, readability, and maintainability while keeping the functionality unchanged.
 Ensure:
 1. The refactored code is more efficient and optimized.
@@ -50,7 +50,7 @@ NEXT_STEPS_START
 NEXT_STEPS_END
 """
 
-PROMPT_GENERATE_TESTCASES = """
+PROMPT_GENERATE_TESTCASES="""
 Create a comprehensive unit test case for the provided code.
 Ensure:
 1. The tests cover all edge cases and core functionality.
