--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ LOCATION=global           # Options: global, us
 
 
 # List of files to exclude from processing
-EXCLUDED_FILES=GreenCodeRefiner.py,RefinerFunction.py,server_emissions.py,track_emissions.py,report_template.html,details_template.html,emissions_report.html,details_report.html,last_run_details_template.html,last_run_report_template.html,server_report.html,AzureMarketplace.py,details_server_template.html,recommendations_template.html,code_refiner.py,recommendations_report.html,emissions_report.html,details_report.html,server_report.html
+EXCLUDED_FILES=GreenCodeRefiner.py,RefinerFunction.py,server_emissions.py,track_emissions.py,report_template.html,details_template.html,emissions_report.html,details_report.html,last_run_details_template.html,last_run_report_template.html,server_report.html,AzureMarketplace.py,details_server_template.html,recommendations_template.html,code_refiner.py,recommendations_report.html,emissions_report.html,details_report.html,server_report.html,mul_server_emissions.py
 EXCLUDED_DIRECTORIES=GreenCode
 
 # Store file extensions in a variable
