--- a/.env
+++ b/.env
@@ -70,6 +70,8 @@ NEXT_STEPS_END
 # Qwen Model Credentials
 HF_TOKEN=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
 
+AZURE_MODEL=qwen-32b
+
 # API configuration
 API_URL=https://api-inference.huggingface.co/models/
 
