--- a/.env
+++ b/.env
@@ -34,8 +34,7 @@ EXCLUDED_DIRECTORIES=GreenCode
 # Store file extensions in a variable
 FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts', '.rb']
 
-PROMPT_1="""
-Refactor this code to improve its efficiency, readability, and maintainability while keeping the functionality unchanged.
+PROMPT_1="""Refactor this code to improve its efficiency, readability, and maintainability while keeping the functionality unchanged.
 Ensure:
 1. The refactored code is more efficient and optimized.
 2. Add comments in the code where significant changes were made.
@@ -51,8 +50,7 @@ NEXT_STEPS_END
 , y
 """
 
-PROMPT_GENERATE_TESTCASES="""
-Create a comprehensive unit test case for the provided code.
+PROMPT_GENERATE_TESTCASES="""Create a comprehensive unit test case for the provided code.
 Ensure:
 1. The tests cover all edge cases and core functionality.
 
