modify the prompts

--- a/.env
+++ b/.env
@@ -34,36 +34,9 @@ EXCLUDED_DIRECTORIES=GreenCode
 # Store file extensions in a variable
 FILE_EXTENSIONS = ['.py', '.java', '.xml', '.php', '.cpp', '.html', '.css', '.ts', '.rb']
 
-PROMPT_1="""Refactor this code to improve its efficiency, readability, and maintainability while keeping the functionality unchanged.
-Ensure:
-1. The refactored code is more efficient and optimized.
-2. Add comments in the code where significant changes were made.
+PROMPT_1="Refactor this code to improve its energy efficiency, readability, and maintainability while keeping the functionality unchanged. Ensure: 1. The refactored code is more energy efficient and optimized and maintain comment where changes made. 2. Add comments in the code where significant changes were made. After the code, provide: CHANGES_START - [specific change description 1] CHANGES_END NEXT_STEPS_START - [one concise recommendation for future improvement] NEXT_STEPS_END, y"
 
-After the code, provide:
-CHANGES_START
-- [specific change description 1]
-CHANGES_END
-
-NEXT_STEPS_START
-- [one concise recommendation for future improvement]
-NEXT_STEPS_END
-, y
-"""
-
-PROMPT_GENERATE_TESTCASES="""Create a comprehensive unit test case for the provided code.
-Ensure:
-1. The tests cover all edge cases and core functionality.
-
-After the test code, provide:
-CHANGES_START
-- [test coverage description]
-CHANGES_END
-
-NEXT_STEPS_START
-- [one concise recommendation for test improvement]
-NEXT_STEPS_END
-, y
-"""
+PROMPT_GENERATE_TESTCASES="Create a comprehensive unit test case for the provided code. Ensure: 1. The tests cover all edge cases and core functionality. After the test code, provide: CHANGES_START - [test coverage description] CHANGES_END NEXT_STEPS_START - [one concise recommendation for test improvement] NEXT_STEPS_END, y"
 
 # Qwen Model Credentials
 HF_TOKEN=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
